# pdf2txt

./: Pipfile  README.md  setup.cfg
pdf2txt/: main.py
test/: test_main.py
test/testdata/: Switzerland Payslip.txt
