[metadata]
name = pdf2txt
version = 1.0.1
author = Grzegorz Milka
author_email = gmilka91@gmail.com
description = A script that extracts text content from PDF files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gregorias/pdf2txt
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    tika

[options.entry_points]
console_scripts =
  pdf2txt = pdf2txt.main:main
